# red

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile64  DockerfileEnv64  README.md  build64  buildDockerEnv64  docker-bulid  gen  make-cpp-docker  netsdk.thrift
clojure/: .gitignore  Dockerfile  README.md  project.clj
clojure/resources/: dev.edn  log4j.properties
clojure/src/red/: config.clj  core.clj  handler.clj  repl.clj  server.clj  struct.clj  transobj.clj  utils.clj
clojure/src/red/client/: asynchronous_server.clj  core.clj  restful.clj  restfull.clj
clojure/src/red/device/: active.clj  callback.clj  client.clj  device.clj  exe.clj  exec.clj  gateway.clj  launcher.clj  operate.clj  passive.clj  source.clj
clojure/src/red/device/active/: core.clj  playback.clj  realplay.clj  voicetalk.clj
clojure/src/red/device/client/: client.clj  core.clj  device.clj  exe.clj  gateway.clj  operate.clj  source.clj
clojure/src/red/device/client/sdk/: callback.clj  core.clj  launcher.clj
clojure/src/red/device/sdk/: callback.clj  core.clj  launcher.clj  request.clj
clojure/src/red/device/server/: core.clj  device.clj
clojure/src/red/exe/: callback.clj  core.clj  launcher.clj  request.clj
clojure/src/red/media_server/: asynchronous_server.clj  core.clj  restful.clj
clojure/src/red/routes/: home.clj
clojure/src/red/routes/api/gateway/: device.clj  media.clj
clojure/src/red/routes/api/media/: playback.clj  realplay.clj  voice_talk.clj
clojure/src/red/routes/demo/: home.clj
clojure/src/red/routes/media/: playback.clj  realplay.clj  status.clj  voice_talk.clj  voicetalk.clj
clojure/src/red/sdk/: callback.clj  core.clj  launcher.clj  request.clj
clojure/test/demo/: client_core.clj
cpp/: AllinOne.sln  CMakeLists.txt  Dockerfile  Makefile
cpp/CMakeLibrarys/: dahua.cmake  hik.cmake  thrift.cmake
cpp/contrib/include/dahua/: dhnetsdk.h
cpp/contrib/include/gt/: ip_netsdk.h
cpp/src/: base.cpp  client.cpp  client.h  dahua.cpp  hik.cpp  main.cpp  server.cpp  server.h  server_device.cpp  server_device.h  server_media.cpp  server_media.h
cpp/src/sdks/: dahua.cpp  gt.cpp  hik.cpp  xm.cpp
cpp/vcxprojs/: PropertySheet.props_  dahua.bat  dahua.vcxproj  hik.bat  hik.vcxproj  main.vcxproj  main.vcxproj.filters
docker/alauda.cn/: Dockerfile
docker/docker.com/: Dockerfile
docker32/: Dockerfile
resources/: default.edn  dev.edn  log4j.properties
src/red/: config.clj  core.clj  server.clj  utils.clj
src/red/device/: callback.clj  client.clj  device.clj  exe.clj  gateway.clj  source.clj
src/red/media_server/: asynchronous_server.clj  core.clj
src/red/routes/api/gateway/: device.clj  media.clj  ptz.clj
src/red/routes/api/media/: status.clj  voice_talk.clj
src/red/routes/demo/: home.clj
test/demo/: core_test.clj
thrift/: Dockerfile  gen  gen.bat  info.thrift  mediaSDK.thrift  netSDK.thrfit  netSDK.thrift  types.thrift
